# prontara-factory

./: .gitignore  CLAUDE.md  README.md  STATUS.md  apply-prontara-database.ps1  build-blueprint.ps1  build-prontara-client.ps1  build-prontara-release.ps1  business-registry.ps1  deploy-prontara-release.ps1  export-prontara-package.ps1  generate-prontara-database.ps1  generate-prontara.ps1  init-prontara-database.ps1  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  prontara.ps1  resolve-business-name.ps1  resolve-business-type.ps1  resolve-explicit-modules.ps1  sync-prontara-history.ps1  tsconfig.json  update-prontara-maintenance.ps1  vercel.json  vitest.config.mts
desktop-wrapper/: app-config.json  index.html
docs/: HANDOFF-2026-05-13-TEST-2.md  HANDOFF-2026-05.md  PRUEBA-SF-USUARIO.md  QA-PLAN-SOFTWAREFACTORY.md  auditoria-verticales-2026-05-07.md  billing-stripe-setup.md  cierre-bloque-A-async-postgres.md  colegio-modulos.md  core-erp-modulos.md  deploy-vercel.md  email-resend-checklist.md  email-setup.md  factory-chat-setup.md  manual-validation-plan.md  persistence-architecture.md  persistence-migration-plan.md  persistence-migration-status.md  retention-policy.md  rls-setup.md  runtime-api-next-step.md  runtime-tenant-aware.md  runtime-tenant-context-migration.md  scripts-migration-plan.md  sesion-cierre-postgres-stripe-deploy.md  smoke-test-chat-pr.md  smoke-test-iter-2.md  tenant-model.md  verifactu-pendientes.md  vertical-pattern.md
prisma/: schema.prisma  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+691 files in other folders)
